[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
ignore-vcs = true
include = ["oas_yaml_combine.py", "errors.py"]
artifacts = [
  "vendor/*.so",
]

[tool.hatch.build.targets.wheel]
ignore-vcs = true
include = ["oas_yaml_combine.py", "errors.py"]
artifacts = [
  "vendor/*.so",
]

[project]
name = "oas-yaml-combine-py"
version = "0.0.1"
authors = [
  { name="sarpt", email="sarpt.contact@gmail.com" },
]
description = "A python wrapper over a dynamic library build of oas_yaml_combine from openapi-utils"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
]

[project.urls]
Homepage = "https://github.com/sarpt/oas-yaml-combine-py"
Issues = "https://github.com/sarpt/oas-yaml-combine-py/issues"

